2003-03-09  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/gen.c: applied in-/dec patch mentioned on sdcc-devel 2003-03-01

2003-03-08  Bernhard Held <bernhard@bernhardheld.de>

	* src/configure.in:   check for endianess (even while cross-compiling)
	* src/configure:      check for endianess (even while cross-compiling)
	* src/configure_in.h: check for endianess (even while cross-compiling)
	* src/avr/gen.c:        remove old endianess stuff
	* src/mcs51/gen.c:      remove old endianess stuff
	* src/ds390/gen.c:      remove old endianess stuff
	* src/pic/gen.c:        remove old endianess stuff
	* src/pic/genarith.c:   remove old endianess stuff
	* src/pic/glue.c:       fix endianess check
	* src/pic16/gen.c:      remove old endianess stuff
	* src/pic16/genarith.c: remove old endianess stuff
	* src/pic16/glue.c:     fix endianess check
	* src/xa51/gen.c:       remove old endianess stuff
	* src/z80/gen.c:        fix endianess check
	* src/SDCCglue.c:       fix endianess check
	* src/ds390/peeph.def: fix bug 700036

2003-03-08  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCsymt.h: use appropriate data-types on host for SDCC's int and long
	* src/configure: find appropriate data-types on host for SDCC's int and long
	* src/configure.in: find appropriate data-types on host for SDCC's int and long
	* src/sdccconf_in.h: find appropriate data-types on host for SDCC's int and long
	* src/xa51/gen.c: use %d, not %ld for 4 byte variables

2003-03-07    <johan@balder>

	Just a big NOOP:
		some minor cleanups before the big shot
		OP_DEFS and OP_USES now use Kevin's protection
		new option --nolabelopt

	* src/SDCCBBlock.c:
	* src/SDCCast.c,:
	* src/SDCCcflow.c:
	* src/SDCCcse.c:
	* src/SDCCicode.c:
	* src/SDCCicode.h:
	* src/SDCClabel.c:
	* src/SDCCloop.c:
	* src/SDCCmain.c:
	* src/ds390/ralloc.c:
	* src/mcs51/ralloc.c:
	* src/pic/ralloc.c:
	* src/xa51/ralloc.c:
	* src/z80/ralloc.c:

2003-03-06  Bernhard Held <bernhard@bernhardheld.de>
